# rustaoc

./: Cargo.toml
src/: lib.rs  main.rs
src/domain/: mod.rs
src/domain/common/: mod.rs
src/domain/controllers/: solution.rs
src/domain/entities/: day.rs  mod.rs  year.rs
src/domain/services/: config.rs  input_fetcher.rs  mod.rs
src/solutions/: mod.rs
src/solutions/y2019/: mod.rs
src/solutions/y2019/days/: mod.rs
src/solutions/y2022/: mod.rs
src/solutions/y2022/days/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d13.rs  mod.rs
