[package]
name = "rustaoc"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
itertools = "0.10.5"
once_cell = "1.17.1"
rayon = "1.6.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "cookies"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
url = { version = "2.3.1", features = ["serde"] }
